--- a/jshp_v04_1.html
+++ b/jshp_v04_1.html
@@ -124,6 +124,6 @@
             <div id="loadingBar"></div>
         </div>
     </div>
-    <script src="app_v4_1.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
