--- a/jshp_v04_1.html
+++ b/jshp_v04_1.html
@@ -120,6 +120,7 @@
             </div>
         </div>
         <button id="joinAndDownload" class="full-width">Join Data</button>
+        <button id="convertOnly" class="full-width">Convert Shapefile Only</button>
         <div id="loadingBarContainer">
             <div id="loadingBar"></div>
         </div>
